force-app/main/default/objects/Rate__mdt/Rate__mdt.object-meta.xml
<CustomObject>
    <label>Rate</label>
    <pluralLabel>Rates</pluralLabel>
</CustomObject>