force-app/main/default/objects/Rate__mdt/fields/Rate_for_0_To_499__c.field-meta.xml
<CustomField>
    <fullName>Rate_for_0_To_499__c</fullName>
    <label>Rate for 0 To 499</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>