force-app/main/default/objects/Rate__mdt/fields/Rate_for_1000_To_1499__c.field-meta.xml
<CustomField>
    <fullName>Rate_for_1000_To_1499__c</fullName>
    <label>Rate for 1000 To 1499</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>