force-app/main/default/objects/Rate__mdt/fields/Rate_for_1500__c.field-meta.xml
<CustomField>
    <fullName>Rate_for_1500__c</fullName>
    <label>Rate for 1500+</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>