force-app/main/default/objects/Rate__mdt/fields/Rate_for_500_To_999__c.field-meta.xml
<CustomField>
    <fullName>Rate_for_500_To_999__c</fullName>
    <label>Rate for 500 To 999</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>